# CStruct

./: CMakeLists.txt  README.md
include/: cstruct.h
src/: cstruct.c
test/: a.out  main.c
